--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,19 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="vi">
 <head>
-  <meta charset="utf-8">
-  <title>Demo2</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="google-site-verification" content="I78NjD5Z5LAq3TD78-WAPgKnvrq9MOcLGFd7Q80jxww" />
+  <meta name="msvalidate.01" content="693D688A21E44D57362FECFA75F7C268" />
+  <meta http-equiv="content-language" content="vi" />
+  <meta property="og:type" content="website">
+	<meta property="al:android:package" content="vn.com.videofly.videofly">
+	<meta property="al:android:app_name" content="VideoFly">
+	<meta property="al:ios:app_store_id" content="1081257854">
+  <meta property="al:ios:app_name" content="VideoFly">
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
